--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
       <nav>
         <a class="logo" href="/index.html"><span class="web">Web</span>Studio</a>
         <ul class="nav">
-          <li><a class="current" href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+          <li class="nav-list-item"><a href="/">Студія</a></li>
+          <li class="nav-list-item"><a href="/">Портфоліо</a></li>
+          <li class="nav-list-item"><a href="/">Контакти</a></li>
         </ul>
         <div class="info">
-          <a class="current" href="mailto:info@devstudio.com">
+          <a class="info-link" href="mailto:info@devstudio.com">
             <svg width="16" height="12">
               <use href="./img/icons/symbol-defs.svg#icon-envelope"></use>
             </svg>
-            info@devstudio.com</a>
-          <a class="tell" href="tel:+380961111111">
+            info@devstudio.com</a
+          >
+          <a class="info-link" href="tel:+380961111111">
             <svg width="10" height="16">
               <use href="./img/icons/symbol-defs.svg#icon-mobile"></use>
             </svg>
-            +38 096 111 11 11</a>
+            +38 096 111 11 11</a
+          >
         </div>
       </nav>
     </header>
@@ -42,7 +44,7 @@
       <section class="page-section">
         <div>
           <h1 class="page-title">Ефективні рішення для <br />вашого бізнесу</h1>
-          <button class="main-button" type="button">Замовити послугу</button>
+          <button class="main-button" type="button"><a class="main-button-link" href="">Замовити послугу</a></button>
         </div>
       </section>
       <!-- Advantages -->
@@ -84,21 +86,109 @@
             <img class="img-second" src="./img/4.jpg" alt="man with glasses" />
             <h4 class="h4">Ігор Дем'яненко</h4>
             <p class="position">Product Designer</p>
+            <ul class="social-icons">
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
           </li>
           <li class="card">
             <img class="img-second" src="./img/5.jpg" alt="woman with glasses" />
             <h4 class="h4">Ольга Рєпіна</h4>
             <p class="position">Frontend Developer</p>
+            <ul class="social-icons">
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
           </li>
           <li class="card">
             <img class="img-second" src="./img/6.jpg" alt="smiling man" />
             <h4 class="h4">Микола Тарасов</h4>
             <p class="position">Marketing</p>
+            <ul class="social-icons">
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
           </li>
           <li class="card">
             <img class="img-second" src="./img/7.jpg" alt="man with a beard" />
             <h4 class="h4">Михайло Єрмаков</h4>
             <p class="position">UI Designer</p>
+            <ul class="social-icons">
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="social-item">
+                <svg width="16" height="16">
+                  <use href="./img/icons/social media.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
