--- a/index.html
+++ b/index.html
@@ -48,10 +48,15 @@
         </div>
       </section>
       <!-- Advantages -->
-      <section>
+      <section class="advantages-section">
         <h2 class="visually-hidden">Advantages</h2>
         <ul class="titles names">
           <li>
+            <div class="advantages-icon">
+              <svg width="50" height="50">
+                <use href="./img/icons/advantages-icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
@@ -70,7 +75,7 @@
         </ul>
       </section>
       <!-- what we are doing -->
-      <section>
+      <section class="doing-section">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="titles images">
           <li><img class="img-first" src="./img/1.jpg" alt="tablet with keybord" /></li>
