--- a/index.html
+++ b/index.html
@@ -61,14 +61,29 @@
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
+            <div class="advantages-icon">
+              <svg width="50" height="50">
+                <use href="./img/icons/advantages-icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="subtitle">ПУНКТУАЛЬНІСТЬ</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
+            <div class="advantages-icon">
+              <svg width="50" height="50">
+                <use href="./img/icons/advantages-icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="subtitle">ПЛАНУВАННЯ</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
+            <div class="advantages-icon">
+              <svg width="50" height="50">
+                <use href="./img/icons/advantages-icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
