--- a/index.html
+++ b/index.html
@@ -215,12 +215,39 @@
     </main>
     <!-- footer -->
     <footer>
+      <div class="footer-container">
       <a class="logo alt" href="/index.html"><span class="web">Web</span>Studio</a>
       <ul>
-        <li><address>м. Київ, пр-т Лесі Українки, 26</address></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="footer-contact-item" ><a href="https://goo.gl/maps/v3tjcAtXxy9u2wiUA" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a> </li>
+        <li class="footer-contact-item" ><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="footer-contact-item" ><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
+    </div>
+    <div class="footer-social-icons">
+      <h3 class="footer-join-title">приєднуйтесь</h3>
+      <ul class="footer-join-list">
+        <li class="footer-join-item">
+          <svg width="16" height="16">
+            <use href="./img/icons/social media.svg#icon-instagram"></use>
+          </svg>
+        </li>
+        <li class="footer-join-item">
+          <svg width="16" height="16">
+            <use href="./img/icons/social media.svg#icon-twitter"></use>
+          </svg>
+        </li>
+        <li class="footer-join-item">
+          <svg width="16" height="16">
+            <use href="./img/icons/social media.svg#icon-facebook"></use>
+          </svg>
+        </li>
+        <li class="footer-join-item">
+          <svg width="16" height="16">
+            <use href="./img/icons/social media.svg#icon-linkedin"></use>
+          </svg>
+        </li>
+      </ul>
+    </div>
     </footer>
   </body>
 </html>
